i trying make new update 2.0